@@ -1,3 +1,8 @@
+2006-10-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/dgram.c (dgram_cat),
+	  common-src/packet.c (pkt_init, pkt_cat): Works correctly with
+						   vsnprintf returning -1.
+
 2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/planner.c: Improve message for dump larger than available
 				tape space if runtapes > 1 and splitsize == 0.
